# isomesh

./: Cargo.toml  README.md  config.toml
benches/: mc_bench.rs  mdc_bench.rs
examples/: Cargo.toml  bevy_integration.rs
examples/src/: bevy_integration.rs  mdc_bevy_integration.rs  mdc_bevy_large.rs
src/: lib.rs  mat3.rs  mdc.rs  octree.rs  qef_solver.rs  sampler.rs  smat3.rs  svd.rs
src/manifold_dual_contouring/: file_io.rs  mdc.rs  mod.rs  octree.rs  qef_solver.rs  sampler.rs  svd.rs  test_data.rs
src/manifold_dual_contouring_2/: mdc.rs  octree.rs  qef.rs
src/marching_cubes/: color_provider.rs  mc.rs  mod.rs
src/mdc/: file_io.rs  mat3.rs  mdc.rs  mod.rs  octree.rs  qef_solver.rs  sampler.rs  smat3.rs  svd.rs  tables.rs
src/mdc2/: mdc.rs  mod.rs  qef.rs  solver.rs  vertex.rs
tests/: test_data.rs  test_mdc.rs
