[package]
name = "isomesh"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
glam = "0.29.3"
rayon = "1.8"

[dev-dependencies]
criterion = "0.5"

[workspace]
members = ["examples"]

[[bench]]
name = "mdc_bench"
harness = false

[profile.bench]
debug = true

#cargo run -p  examples --bin bevy_integration -r