[package]
name = "isomesh"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
glam = "0.29.3"
rayon = "1.8"
noise = "0.9.0"
parking_lot = "0.12.4"

[dev-dependencies]
criterion = "0.5"

[workspace]
members = ["examples"]

[[bench]]
name = "mdc_bench"
harness = false

[[bench]]
name = "mc_bench"
harness = false

[profile.bench]
debug = true

#cargo run -p  examples --bin bevy_integration -r